Readability fixes for new scheduler calendar.
git-svn-id: https://svn.master.freemedsoftware.org/freemed/trunk@3591 6507a214-7cff-0310-bd63-e3842a560bc8

--- a/ui/dojo/htdocs/mywidgets/widget/templates/Calendar.css
+++ b/ui/dojo/htdocs/mywidgets/widget/templates/Calendar.css
@@ -126,7 +126,7 @@ li.listItem span.timetext {
 li.listItem span.titletext {
 	cursor: default;
 }
-li.listItem span a:link, li.listItem span a:visited {
+li.listItem span a:link, li.listItem span a {
 	color: #000000;
 	text-decoration: none;
 }
@@ -206,6 +206,7 @@ li.listItem span a:hover {
 
 .calendarItems {
 	clear: both;
+	text-align: left;
 	padding: 0px 3px 0px 3px;
 	/*height: 40px;*/
 	overflow: auto;
